# tinyraytracer

./: .gitignore  CMakeLists.txt  README.md
src/: color.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  object.hpp  object_list.cpp  object_list.hpp  ray.h  ray.hpp  sphere.cpp  sphere.h  sphere.hpp  utility.cpp  utility.h  utility.hpp  vec3.cpp  vec3.h
src/accelerator/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp
src/core/: camera.cpp  camera.hpp  material.hpp  object.hpp  ray_tracer.cpp  ray_tracer.hpp  scene.hpp  texture.hpp
src/main/: main.cpp
src/material/: dielectric.cpp  dielectric.hpp  diffuse_light.cpp  diffuse_light.hpp  isotropic.cpp  isotropic.hpp  lambertian.cpp  lambertian.hpp  metal.cpp  metal.hpp
src/math/: constant.cpp  constant.hpp  ray.hpp  vec3.hpp
src/object/: box.cpp  box.hpp  participating_media.cpp  participating_media.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
src/texture/: checker_texture.cpp  checker_texture.hpp  image_texture.cpp  image_texture.hpp  perlin_noise_texture.cpp  perlin_noise_texture.hpp  solid_color_texture.cpp  solid_color_texture.hpp
src/utility/: intersection.cpp  intersection.hpp  utility.hpp
